[gd_scene load_steps=7 format=3 uid="uid://caun3kuk14f6j"]

[ext_resource type="Script" path="res://Objects/UI/AbilityPickUp/AbilityButton.gd" id="1_58cgq"]
[ext_resource type="Texture2D" uid="uid://bbg2cuoy3xo6k" path="res://Art/InputPrompts/Controller/switch_buttons_down_outline.png" id="2_3jfa1"]
[ext_resource type="Texture2D" uid="uid://kjb7itjw8krr" path="res://Art/InputPrompts/Controller/switch_buttons_none.png" id="2_plhs5"]
[ext_resource type="Texture2D" uid="uid://diouce7l5lxpq" path="res://Art/InputPrompts/Controller/switch_buttons_up_outline.png" id="3_o621e"]
[ext_resource type="Texture2D" uid="uid://hfl2lhchx82d" path="res://Art/InputPrompts/Controller/switch_buttons_right_outline.png" id="4_gtbq3"]
[ext_resource type="Texture2D" uid="uid://b8rglswniqm1i" path="res://Art/InputPrompts/Controller/switch_buttons_left_outline.png" id="5_xlhpq"]

[node name="AbilityButton" type="Control"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58cgq")
buttonTexture_Down = ExtResource("2_3jfa1")
buttonTexture_Up = ExtResource("3_o621e")
buttonTexture_Right = ExtResource("4_gtbq3")
buttonTexture_Left = ExtResource("5_xlhpq")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameText" type="Label" parent="Button/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Name"

[node name="AbilityTypeTexture" type="TextureRect" parent="Button/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("2_plhs5")
stretch_mode = 2

[node name="DescriptionText" type="Label" parent="Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Description"
autowrap_mode = 2

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
